# LearnC

./: README.md
Book/: README.md  temp  temp.c
C_GTest/: CMakeLists.txt  README.md
C_GTest/src/: my_function.c  my_function.h
C_GTest/test/: CMakeLists.txt  my_function_test.cpp
C_Tensorflow/: README.md  nn.c
Hello_world/: hello
Neural_Network/: CMakeLists.txt  nn.c
